miner his own class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
 
     <script src="vendor/phaser-ce.2.8.6.min.js"></script>
+    <script src="scripts/miner.js"></script>
     <script src="scripts/game.js"></script>
   </body>
 </html>
