--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
 
     <script src="vendor/phaser-ce.2.8.8.min.js"></script>
+    <script src="scripts/level.js"></script>
     <script src="scripts/squirrel.js"></script>
     <script src="scripts/miner.js"></script>
     <script src="scripts/game.js"></script>
